--- a/omh-ionic/src/app/tabs/tabs.page.html
+++ b/omh-ionic/src/app/tabs/tabs.page.html
@@ -4,5 +4,9 @@
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="login">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Login</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
