init signup page

--- a/omh-ionic/src/app/signup/signup.page.html
+++ b/omh-ionic/src/app/signup/signup.page.html
@@ -1,6 +1,6 @@
 <ion-content>
- <ion-img class="loginIcon" src="./assets/login.svg"></ion-img>
-  <ion-title class="loginTitle">Connexion</ion-title>
+  <ion-img class="loginIcon" src="./assets/login.svg"></ion-img>
+  <ion-title class="loginTitle">Inscription</ion-title>
   <ion-card class="loginForm">
     <ion-card-content>
       <ion-label class="loginLabel">Email</ion-label>
@@ -8,9 +8,9 @@
       <ion-label class="loginLabel">Mot de passe</ion-label>
       <ion-input class="loginInput" type="password"></ion-input>
       <div class="loginButton">
-      <ion-button routerLink="" color="light" type="submit">Se connecter</ion-button>
+        <ion-button color="light" type="submit">Se connecter</ion-button>
       </div>
-      <p>Pas encore de compte ? <a routerLink="/signup" href="">Inscrivez-vous</a></p>
+      <p>Pas encore de compte ? <a routerLink="/login" href="">Connectez-vous</a></p>
     </ion-card-content>
   </ion-card>
   <ion-title class="orLogin">- OU -</ion-title>
