--- a/omh-ionic/src/app/signup/signup.page.scss
+++ b/omh-ionic/src/app/signup/signup.page.scss
@@ -55,10 +55,9 @@ ion-content {
 .logoConnect {
   margin-left: -15px;
   margin-right: 30px;
- text-align: center;
+  text-align: center;
 }
 
 .tabsbar {
-  display: none !important;
+  display: none;
 }
-
