--- a/omh-ionic/src/app/tab/tab.page.html
+++ b/omh-ionic/src/app/tab/tab.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs class="tabsbar">
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home-outline"></ion-icon>
@@ -7,6 +7,10 @@
     <ion-tab-button tab="login">
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Login</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="signup">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Signup</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
