--- a/omh-ionic/src/app/login/login.page.html
+++ b/omh-ionic/src/app/login/login.page.html
@@ -8,12 +8,11 @@
       <ion-label class="loginLabel">Mot de passe</ion-label>
       <ion-input class="loginInput" type="password"></ion-input>
       <div class="loginButton">
-      <ion-button routerLink="" color="light" type="submit">Se connecter</ion-button>
+      <ion-button routerLink="/home" color="light" type="submit">Se connecter</ion-button>
       </div>
       <p>Pas encore de compte ? <a routerLink="/signup" href="">Inscrivez-vous</a></p>
     </ion-card-content>
   </ion-card>
-  <ion-title class="orLogin">- OU -</ion-title>
   <div class="button button1"><ion-button color="warning" class="connectWith"><ion-icon class="logoConnect" name="logo-google"></ion-icon>Connexion avec Google</ion-button></div>
   <div class="button"><ion-button color="dark" class="connectWith"><ion-icon class="logoConnect" name="logo-apple"></ion-icon>Connexion avec Apple</ion-button></div>
 </ion-content>
