--- a/omh-ionic/src/app/tab/tab.page.html
+++ b/omh-ionic/src/app/tab/tab.page.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabsbar">
+<ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home-outline"></ion-icon>
