--- a/omh-ionic/src/app/profil/profil.page.html
+++ b/omh-ionic/src/app/profil/profil.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profil</ion-title>
+    <ion-title>Profil</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Profil</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
+<div>
+  <p></p>
+</div>
 </ion-content>
