--- a/omh-ionic/src/app/tab/tab.page.html
+++ b/omh-ionic/src/app/tab/tab.page.html
@@ -2,7 +2,11 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>Accueil</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="profil">
+      <ion-icon name="accessibility-outline"></ion-icon>
+      <ion-label>Profil</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="login">
       <ion-icon name="home-outline"></ion-icon>
